fix: retoma test sonar

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,11 +46,11 @@ steps:
 #   displayName: 'Reescreve exemplo.cypress.env.json'
 
 # # Roda testes do Jest
-# - task: Npm@1
-#   displayName: 'Run test coverage Jest'
-#   inputs:
-#     command: 'custom'
-#     customCommand: 'test -- --coverage'
+- task: Npm@1
+  displayName: 'Run test coverage Jest'
+  inputs:
+    command: 'custom'
+    customCommand: 'test -- --coverage'
 
 # # # Roda testes do Cypress
 # - task: Npm@1
@@ -60,17 +60,17 @@ steps:
 #     customCommand: 'npm run cypress'
 
 # Step 1: Download SonarScanner CLI for Windows
-# - powershell: |
-#     Invoke-WebRequest -Uri https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.7.0.2747-windows.zip -OutFile sonar-scanner-cli-windows.zip
-#     Expand-Archive -Path sonar-scanner-cli-windows.zip -DestinationPath .
-#     $env:PATH = "$(System.DefaultWorkingDirectory)\sonar-scanner-4.7.0.2747-windows\bin;$env:PATH"
-#     echo "##vso[task.setvariable variable=PATH]$env:PATH"
-#   displayName: 'Download and extract SonarScanner CLI for Windows'
+- powershell: |
+    Invoke-WebRequest -Uri https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.7.0.2747-windows.zip -OutFile sonar-scanner-cli-windows.zip
+    Expand-Archive -Path sonar-scanner-cli-windows.zip -DestinationPath .
+    $env:PATH = "$(System.DefaultWorkingDirectory)\sonar-scanner-4.7.0.2747-windows\bin;$env:PATH"
+    echo "##vso[task.setvariable variable=PATH]$env:PATH"
+  displayName: 'Download and extract SonarScanner CLI for Windows'
 
 # #Step 3: Run  Sonar
-# - script: |
-#     sonar-scanner.bat -Dsonar.projectKey=apm-angular-aap -Dsonar.sources=src/app/ -Dsonar.qualitygate.wait=true -Dsonar.host.url=https://sonar-9x.pro.intra.rs.gov.br/ -Dsonar.login=$(tokenSonar)
-#   displayName: 'Run SonarScanner'
+- script: |
+    sonar-scanner.bat -Dsonar.projectKey=apm-angular-aap -Dsonar.sources=src/app/ -Dsonar.qualitygate.wait=true -Dsonar.host.url=https://sonar-9x.pro.intra.rs.gov.br/ -Dsonar.login=$(tokenSonar)
+  displayName: 'Run SonarScanner'
 
   # Executa o build para o ambiente
 - task: Npm@1
