Update azure-pipelines.yml for Azure Pipelines - removendo task do cypress

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,24 +41,12 @@ steps:
   inputs:
     command: 'install'
 
-# # Cria um env local
-# - powershell: |
-#     echo '{ "organizacao": "PROCERGS", "matricula": "$(MATRICULA)", "senha": "$(SENHA)", "token": "Bearer" }' > cypress.env.json
-#   displayName: 'Reescreve exemplo.cypress.env.json'
-
-# # Roda testes do Jest
+# Roda testes do Jest
 - task: Npm@1
   displayName: 'Run test coverage Jest'
   inputs:
     command: 'custom'
     customCommand: 'test -- --coverage'
-
-# # # Roda testes do Cypress
-# - task: Npm@1
-#   displayName: 'Run test cypress'
-#   inputs:
-#     command: 'custom'
-#     customCommand: 'npm run cypress'
 
 # Step 1: Download SonarScanner CLI for Windows
 - powershell: |
