--- a/pipelines/azure-pipelines.yml
+++ b/pipelines/azure-pipelines.yml
@@ -35,6 +35,10 @@ steps:
     versionSpec: '20.12.x'
   displayName: 'Install Node.js'
 
+- task: npmAuthenticate@0
+  inputs:
+    workingFile: '/.npmrc'
+
 # Instala as dependências do projeto
 - task: Npm@1
   displayName: 'Npm Install'
