--- a/pipelines/azure-pipelines.yml
+++ b/pipelines/azure-pipelines.yml
@@ -37,7 +37,7 @@ steps:
 
 - task: npmAuthenticate@0
   inputs:
-    workingFile: '/.npmrc'
+    workingFile: './.npmrc'
 
 # Instala as dependências do projeto
 - task: Npm@1
