--- a/pipelines/azure-pipelines.yml
+++ b/pipelines/azure-pipelines.yml
@@ -46,24 +46,24 @@ steps:
     command: 'install'
 
 # Roda testes do Jest
-# - task: Npm@1
-#   displayName: 'Run test coverage Jest'
-#   inputs:
-#     command: 'custom'
-#     customCommand: 'test -- --coverage'
+- task: Npm@1
+  displayName: 'Run test coverage Jest'
+  inputs:
+    command: 'custom'
+    customCommand: 'test -- --coverage'
 
-# # Step 1: Download SonarScanner CLI for Windows
-# - powershell: |
-#     Invoke-WebRequest -Uri https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.7.0.2747-windows.zip -OutFile sonar-scanner-cli-windows.zip
-#     Expand-Archive -Path sonar-scanner-cli-windows.zip -DestinationPath .
-#     $env:PATH = "$(System.DefaultWorkingDirectory)\sonar-scanner-4.7.0.2747-windows\bin;$env:PATH"
-#     echo "##vso[task.setvariable variable=PATH]$env:PATH"
-#   displayName: 'Download and extract SonarScanner CLI for Windows'
+# Step 1: Download SonarScanner CLI for Windows
+- powershell: |
+    Invoke-WebRequest -Uri https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.7.0.2747-windows.zip -OutFile sonar-scanner-cli-windows.zip
+    Expand-Archive -Path sonar-scanner-cli-windows.zip -DestinationPath .
+    $env:PATH = "$(System.DefaultWorkingDirectory)\sonar-scanner-4.7.0.2747-windows\bin;$env:PATH"
+    echo "##vso[task.setvariable variable=PATH]$env:PATH"
+  displayName: 'Download and extract SonarScanner CLI for Windows'
 
-# # #Step 3: Run  Sonar
-# - script: |
-#     sonar-scanner.bat -Dsonar.projectKey=apm-angular-aap -Dsonar.sources=src/app/ -Dsonar.qualitygate.wait=true -Dsonar.host.url=https://sonar-9x.pro.intra.rs.gov.br/ -Dsonar.login=$(tokenSonar)
-#   displayName: 'Run SonarScanner'
+# #Step 3: Run  Sonar
+- script: |
+    sonar-scanner.bat -Dsonar.projectKey=apm-angular-aap -Dsonar.sources=src/app/ -Dsonar.qualitygate.wait=true -Dsonar.host.url=https://sonar-9x.pro.intra.rs.gov.br/ -Dsonar.login=$(tokenSonar)
+  displayName: 'Run SonarScanner'
 
   # Executa o build para o ambiente
 - task: Npm@1
@@ -72,20 +72,11 @@ steps:
     command: 'custom'
     customCommand: 'run build:$(environmentName)'
 
-- task: ArchiveFiles@2
-  inputs:
-    rootFolderOrFile: '$(Build.SourcesDirectory)\dist\procergs-apm-angular\browser'
-    includeRootFolder: true
-    archiveType: 'zip'
-    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
-    replaceExistingArchive: true
-
-
 # Publica os artefatos de build para o destino correto
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact (profs02)'
   inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    PathtoPublish: '$(Build.SourcesDirectory)\dist\procergs-apm-angular\browser'
     ArtifactName: dist
     publishLocation: FilePath
     TargetPath: '$(pastaPublicacao)'
