Update azure-pipelines-deploy-lvp.yml for Azure Pipelines

--- a/pipelines/azure-pipelines-deploy-lvp.yml
+++ b/pipelines/azure-pipelines-deploy-lvp.yml
@@ -92,3 +92,4 @@ stages:
           inputs:
             Matricula: '$(matriculaSOE)'
             Senha: '$(senhaSOE)'         
+            TimeOut: '30'
